# rtfbs

./: ChangeLog  DESCRIPTION  LICENSE  MD5  NAMESPACE  configure  configure.ac
R/: tfbs.R
inst/doc/: vignette.Rnw
man/: as-dot-pointer-dot-ms.Rd  as.pointer.ms.Rd  build-dot-mm.Rd  build.mm.Rd  calc-dot-fdr.Rd  calc.fdr.Rd  concat-dot-ms.Rd  concat.ms.Rd  from-dot-pointer-dot-ms.Rd  from.pointer.ms.Rd  gcContent-dot-ms.Rd  gcContent.ms.Rd  groupByGC-dot-ms.Rd  groupByGC.ms.Rd  is-dot-pointer-dot-ms.Rd  is.pointer.ms.Rd  label.matrix.Rd  length-dot-ms.Rd  length.ms.Rd  lengths-dot-ms.Rd  lengths.ms.Rd  makeFdrPlot.Rd  ms.Rd  names-dot-ms.Rd  names.ms.Rd  offsets-dot-ms.Rd  offsets.ms.Rd  open-brace-dot-ms.Rd  open-brace.ms.Rd  output-dot-sites.Rd  output.sites.Rd  plot-dot-fdr.Rd  print-dot-ms.Rd  print.ms.Rd  read-dot-mm.Rd  read-dot-ms.Rd  read-dot-pwm.Rd  read.mm.Rd  read.ms.Rd  read.pwm.Rd  (+15 more)
src/: Makevars.in  Makevars.win  fit_column.c  fit_feature.c  maf.c  rph_init.c  rph_tfbs.c  sufficient_stats.c
src/pcre/: config.h
tests/: .Rhistory  build_mm.R  calc_fdr.R  groupByGC_ms.R  input.fas  makeFdrPlot.R  output_sites.R  pwm.meme  read_ms.R  read_pwm.R  score_ms.R  simulate_ms.R  tfbs.examples.R
